--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,3 +18,4 @@ error.userEmail.empty = Email nie może być pusty
 error.userPassword = Hasło nie może być puste
 error.userEmailIsNotMatch = Adres Email jest nieprawidłowy
 error.userPasswordIsNotMatch = Hasło powinno zawierać dużą i małą literę, cyfrę oraz jeden ze znaków !, @, #, $
+error.userEmailExist = Podany adres email istnieje już w bazie
