registeration form and validation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,6 +11,9 @@ register.lastName = Nazwisko
 register.email = Adres email
 register.password = Hasło
 
+#USER MESSAGES
+user.register.success = Rejestracja zakończyła się sukcesem
+
 #ERRORS
 error.userName.empty = Imie nie może być puste
 error.userLastName.empty = Nazwisko nie może być puste
@@ -19,3 +22,5 @@ error.userPassword = Hasło nie może być puste
 error.userEmailIsNotMatch = Adres Email jest nieprawidłowy
 error.userPasswordIsNotMatch = Hasło powinno zawierać dużą i małą literę, cyfrę oraz jeden ze znaków !, @, #, $
 error.userEmailExist = Podany adres email istnieje już w bazie
+error.errorPage=Błąd
+error.defaultErrorMessage=Ups... coś poszło nie tak....
