--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,6 +11,9 @@ register.lastName = Nazwisko
 register.email = Adres email
 register.password = Hasło
 
+#LOGIN
+login.loginPage=Logowanie
+
 #USER MESSAGES
 user.register.success = Rejestracja zakończyła się sukcesem
 
@@ -24,3 +27,4 @@ error.userPasswordIsNotMatch = Hasło powinno zawierać dużą i małą literę,
 error.userEmailExist = Podany adres email istnieje już w bazie
 error.errorPage=Błąd
 error.defaultErrorMessage=Ups... coś poszło nie tak....
+error.logowanie=error logowanie
