--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,12 @@ menu.mainPage = Strona główna
 menu.login = Zaloguj
 menu.register = Rejestracja
 menu.logout = Wyloguj
+word.tak =TAK
+word.nie=NIE
+word.admin=Administrator
+word.user=Użytkownik
+
+
 
 button.register = Zarejestruj
 button.cancel = Zrezygnuj
@@ -28,3 +34,10 @@ error.userEmailExist = Podany adres email istnieje już w bazie
 error.errorPage=Błąd
 error.defaultErrorMessage=Ups... coś poszło nie tak....
 error.logowanie=error logowanie
+prifil.userDane=Create property
+
+
+#PROFIL UŻYTKOWNIKA
+menu.profil=Twoje dane
+profil.czyAktywny=Aktywny
+profil.rola=Rola
