registeration form and validation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,16 +1,30 @@
-menu.mainPage = Strona główna
-menu.login = Zaloguj
-menu.register = Rejestracja
-menu.logout = Wyloguj
+#OGOLNE
 word.tak =TAK
 word.nie=NIE
 word.admin=Administrator
 word.user=Użytkownik
+link.poprzedni=Poprzedni
+link.nastepny=Następny
+info.page=Strona
+info.from=z
+info.noDataFound=Brak danych
 
+
+#MENU
+menu.mainPage = Strona główna
+menu.login = Zaloguj
+menu.register = Rejestracja
+menu.logout = Wyloguj
+menu.adminPage=Administracja
+menu.profil=Profil
+menu.users=Użytkownicy
 
 
 button.register = Zarejestruj
 button.cancel = Zrezygnuj
+button.zmianaHasla=Zmień hasło
+
+
 
 register.name = Imie
 register.lastName = Nazwisko
@@ -34,10 +48,18 @@ error.userEmailExist = Podany adres email istnieje już w bazie
 error.errorPage=Błąd
 error.defaultErrorMessage=Ups... coś poszło nie tak....
 error.logowanie=error logowanie
-prifil.userDane=Create property
-
+prifil.userDane=Twoje dane:
 
 #PROFIL UŻYTKOWNIKA
 menu.profil=Twoje dane
 profil.czyAktywny=Aktywny
 profil.rola=Rola
+
+#ZMIANA HASŁA
+passwordChange.oldPassword=Stare Hasło
+passwordChange.newPassword=Nowe hasło
+
+
+
+
+#PROFIL ADMINA
